<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/BaseDetailFragment">

        <ImageButton
            android:id="@+id/store_image"
            style="@style/DetailImage"
            android:contentDescription="@string/img_store"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_placeholder"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/unit_name"
            style="@style/BaseEditTextLayout"
            android:hint="@string/lbl_store_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/store_image">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/BaseEditText"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/user_address"
            style="@style/BaseEditTextLayout"
            android:hint="@string/lbl_user_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unit_name">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/BaseEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/store_manager_layout"
            style="@style/BaseSpinnerLayout"
            android:hint="@string/lbl_store_manager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_address">

            <AutoCompleteTextView
                android:id="@+id/store_manager"
                style="@style/BaseSpinner"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

